[package]
name = "RSA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.8"
crypto = "0.5.1"
crypto-mac = "0.11.1"
hmac = "0.12.1"
crypto-common = "0.1.6"
digest = "0.10.7"
sha = "1.0.3"
rustls = "0.23.5"
sha2 = "0.10.8"
block-buffer = "0.10.4"
rsa = "0.9.6"
subtle = " 2.5.0"


